[gd_scene load_steps=7 format=3 uid="uid://c2yrv2yl17x7g"]

[ext_resource type="Script" path="res://script/scr_a001_jon_office.gd" id="1_i4k15"]
[ext_resource type="Texture2D" uid="uid://bjinkwjstx7ro" path="res://assets/environment/spr_rooms.png" id="2_88yqy"]
[ext_resource type="PackedScene" uid="uid://cthdvsikhn7h1" path="res://character/char_jon_2d.tscn" id="3_d72sm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ljfay"]
texture = ExtResource("2_88yqy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0

[sub_resource type="TileSet" id="TileSet_qhwqw"]
sources/0 = SubResource("TileSetAtlasSource_ljfay")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bteci"]
size = Vector2(22, 34.4)

[node name="env_a001_jon_office" type="Node2D"]
scale = Vector2(10, 10)
script = ExtResource("1_i4k15")

[node name="TileMap" type="TileMap" parent="."]
visibility_layer = 3
y_sort_enabled = true
tile_set = SubResource("TileSet_qhwqw")
format = 2
layer_0/name = "ground"
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(262146, 0, 6, 327682, 0, 7, 393218, 0, 7, 458759, 65536, 7, 458760, 65536, 7, 262147, 65536, 6, 262148, 65536, 6, 327683, 65536, 7, 327684, 65536, 7, 327685, 65536, 7, 262150, 65536, 6, 327686, 65536, 7, 262151, 65536, 6, 327687, 65536, 7, 262152, 131072, 6, 327688, 131072, 7, 393219, 65536, 7, 393220, 65536, 7, 393221, 65536, 7, 393222, 65536, 7, 393223, 65536, 7, 393224, 65536, 7, 393225, 65536, 6, 393226, 65536, 6, 393228, 524288, 4, 393227, 65536, 6, 458754, 0, 7, 458755, 65536, 7, 458757, 65536, 7, 458758, 65536, 7, 524290, 0, 7, 524291, 65536, 7, 524292, 65536, 7, 524293, 65536, 7, 524294, 65536, 7, 524295, 65536, 7, 524296, 65536, 7, 458756, 65536, 7, 262149, 65536, 6)
layer_1/name = "walls_back"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(1, 262144, 1, 65537, 131072, 1, 131073, 131072, 1, 196609, 131072, 1, 2, 65536, 2, 65538, 0, 3, 131074, 0, 4, 196610, 0, 5, 3, 65536, 2, 65539, 65536, 3, 131075, 65536, 4, 196611, 65536, 5, 4, 65536, 2, 65540, 65536, 3, 131076, 65536, 4, 196612, 65536, 5, 5, 65536, 2, 65541, 65536, 3, 131077, 65536, 4, 196613, 65536, 5, 6, 65536, 2, 65542, 65536, 3, 131078, 65536, 4, 196614, 65536, 5, 7, 65536, 2, 65543, 65536, 3, 131079, 65536, 4, 196615, 65536, 5, 8, 65536, 2, 65544, 65536, 3, 131080, 65536, 4, 196616, 65536, 5, 9, 196608, 1, 65545, 0, 1, 131081, 0, 2, 196617, 458752, 1, 131082, 65536, 2, 196618, 65536, 3, 131083, 65536, 2, 196619, 65536, 3, 131084, 65536, 2, 196620, 65536, 3, 262145, 131072, 1, 327681, 131072, 1, 393217, 131072, 1, 458753, 131072, 1, 524289, 131072, 1, 524297, 0, 1, 262153, 458752, 2, 327689, 458752, 3, 262154, 65536, 4, 327690, 65536, 5, 262155, 65536, 4, 327691, 65536, 5, 262156, 65536, 4, 327692, 65536, 5)
layer_2/name = "items"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()
layer_3/name = "walls_front"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array(589825, 262144, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589833, 196608, 0, 458761, 0, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0)

[node name="char_jon_2d" parent="." instance=ExtResource("3_d72sm")]
z_index = 2
y_sort_enabled = true
position = Vector2(50.2, 96.5)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(31.8, 57.3, 31.2, 62.6, 144.3, 63.7, 144.3, 94.8, 208.5, 94.8, 227.7, 94.7, 227.5, 112.5, 227.4, 125.7, 208.1, 125.6, 144.9, 125.6, 144.2, 157.4, 31, 157.1, 31.5, 64.2, 29.5, 52, 10.7, 53.6, 12.2, 164.2, 161.9, 165.2, 161.4, 134.2, 234.4, 134.7, 234.2, 1.7, 5.9, 2.4, 8.4, 49.1, 30.9, 50.3)

[node name="trans_a002_hallway" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trans_a002_hallway"]
position = Vector2(218.7, 109.8)
shape = SubResource("RectangleShape2D_bteci")

[connection signal="body_entered" from="trans_a002_hallway" to="." method="_on_trans_a_002_hallway_body_entered"]
[connection signal="body_exited" from="trans_a002_hallway" to="." method="_on_trans_a_002_hallway_body_exited"]
